# light-bitmap

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml
examples/: combinations.rs
src/: bitmap.rs  lib.rs  tests.rs
tests/ui/: bits_buckets_mismatch_empty.rs  bits_buckets_mismatch_empty.stderr  bits_buckets_mismatch_full.rs  bits_buckets_mismatch_full.stderr  zero_length_empty.rs  zero_length_empty.stderr  zero_length_full.rs  zero_length_full.stderr
